<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/signup_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="text"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:hint="@string/signup_name"/>
    <EditText
        android:id="@+id/signup_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="text"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:hint="@string/signup_sdt"/>
    <EditText
        android:id="@+id/signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="text"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:hint="@string/signup_email"/>
    <EditText
        android:id="@+id/signup_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="text"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:hint="@string/signup_pass"/>

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_signup"
        android:layout_marginTop="15dp"
        android:background="@color/colorAccent"/>

</LinearLayout>

