<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ss8" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_name"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_email"
                android:textSize="20dp" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"></View>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_notifications"
        android:drawableEnd="@drawable/ic_go"
        android:text="@string/drawler_notification"
        android:textSize="25dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"></View>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_list"
        android:drawableEnd="@drawable/ic_go"
        android:text="@string/profile_itembuy"
        android:textSize="25dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"></View>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_favorite_black_24dp"
        android:drawableEnd="@drawable/ic_go"
        android:text="@string/profile_wishlist"
        android:textSize="25dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"></View>

    <Button
        android:id="@+id/profile_btnlogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/profile_logout"
        android:textSize="25dp"
        android:textColor="@color/nav_header_bg"
        android:background="@color/white"
        android:layout_gravity="center"/>
</LinearLayout>