<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:id="@+id/grid_img"
        android:layout_height="125dp"
        android:layout_margin="10dp"
        android:src="@drawable/ss8"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/product_name"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/dark"
        android:textSize="20dp"
        android:text="@string/product_name"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/product_price"
            android:layout_marginTop="5dp"
            android:textColor="@color/product_price"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:text="@string/product_price"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:textColor="@color/product_price"
            android:text="@string/price_icon"
            />
    </LinearLayout>


</LinearLayout>