<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <com.synnapps.carouselview.CarouselView
        android:id="@+id/carouselview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:fillColor="@color/white"
        app:pageColor="#00000000"
        app:radius="6dp"
        app:slideInterval="3000"
        app:strokeColor="#FF777777"
        app:strokeWidth="1dp"></com.synnapps.carouselview.CarouselView>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/colorPrimaryDark" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp">

            <LinearLayout
                android:id="@+id/cate_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/hp_cate_phone"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"

                    />

                <TextView
                    android:id="@+id/hp_cate_phone_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    android:text="@string/category_smartphone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/cate_laptop"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:orientation="vertical">

                <ImageView
                    android:id="@+id/hp_cate_pc"
                    android:layout_width="match_parent"
                    android:layout_height="70dp" />

                <TextView
                    android:id="@+id/hp_cate_pc_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    android:text="@string/category_computer" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/hp_cate_electronic"
                    android:layout_width="match_parent"
                    android:layout_height="70dp" />

                <TextView
                    android:id="@+id/hp_cate_electronic_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    android:text="@string/category_electric" />

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/hp_cate_book"
                    android:layout_width="match_parent"
                    android:layout_height="70dp" />

                <TextView
                    android:id="@+id/hp_cate_book_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    android:text="@string/category_book" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/hp_cate_fashion"
                    android:layout_width="match_parent"
                    android:layout_height="70dp" />

                <TextView
                    android:id="@+id/hp_cate_fashion_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    android:text="@string/category_fashion" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/hp_cate_sport"
                    android:layout_width="match_parent"
                    android:layout_height="70dp" />

                <TextView
                    android:id="@+id/hp_cate_sport_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    android:text="@string/category_sport" />

            </LinearLayout>
        </TableRow>

        <!--<TableRow
            android:layout_margin="5dp"
            android:padding="15dp">

            <Button
                android:id="@+id/hp_cate_btnphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:drawableTop="@drawable/ic_home"
                android:text="@string/category_smartphone" />

            <Button
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:drawableTop="@drawable/ic_home"
                android:text="@string/category_computer" />

            <Button
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:drawableTop="@drawable/ic_home"
                android:text="@string/category_electric" />
        </TableRow>

        <TableRow
            android:layout_margin="5dp"
            android:padding="15dp">

            <ImageView
                android:layout_width="94dp"
                android:layout_height="61dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ss8" />


            <Button
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/category_sport"
                android:drawableTop="@drawable/ic_home" />

            <Button
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/category_fashion"
                android:drawableTop="@drawable/ic_home" />
        </TableRow>-->
    </TableLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/colorPrimaryDark" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/hp_list"
        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>

</LinearLayout>